@@ -1,3 +1,8 @@
+2007-1-3  Keishi Suenaga <skeishi@yahoo.co.jp>
+
+    Fix -iW and timiditydrv.dll sound problem.
+	* timidity/portaudio_a.c: remove broken acntl()s.
+
 2007-1-1  Keishi Suenaga <skeishi@yahoo.co.jp>
 
 	* timidity/timidity.c
